--- a/对比学习.md
+++ b/对比学习.md
@@ -184,5 +184,36 @@ SelfMatch包含两个阶段：
 ![](.\img\c_6002.png)
 ![](.\img\c_6003.png)
 n个增强n+1个z空间，z0是所有的增强都在一起，其他的是不同的增强，每个增强一个嵌入空间
+
 ### 总结
 本篇论文主要是说，原来的对比学习都是映射到同一空间，但是这样会有害学习其他的特征，所以他把每个特征都映射到单独的特征空间，这个空间里都只有经过这一种数据增强的数据
+
+## [Contrastive and Generative Graph Convolutional Networks for Graph-based Semi-Supervised Learning](https://arxiv.org/abs/2009.07111)
+以GCN基础的半监督学习，基于图的半监督学习（SSL）旨在通过图将少数标记数据的标签转移到剩余的大量未标记数据。
+首先，通过设计一个半监督的对比损失，可以通过最大化相同数据的不同视图或同一类数据之间的一致性来产生改进的节点表示，因此，丰富的未标记数据和稀缺而有价值的数据标记数据可以共同提供丰富的监督信息，以学习判别性节点表示形式，有助于改善后续的分类结果。
+其次，通过使用与输入特征相关的图形生成损失，提取数据特征与输入图形拓扑之间的潜在确定性关系作为SSL的补充监管信号。
+**设计了一种新的半监督对比损失，该方法将类别信息附加到了改善节点分类任务的对比表示学习。**
+分别获得从全局视图和局部视图生成的节点表示，然后采用半监督的对比损失来最大化从这两个视图学习的表示之间的一致性。
+其次，考虑到**图拓扑**本身包含宝贵的信息，可以将其用作SSL的补充监督信号，因此我们使用了一个生成项来**显式地建模图和节点表示之间的关系**。结果，可以通过探索来自数据相似性和图形结构的知识来进一步扩展标记数据的最初有限的监督信息，从而导致改进的数据表示和分类结果。
+**通过从两个视图在所获得的表示之间进行对比学习，可以同时对丰富的全局信息和局部信息进行编码**
+用GCN学习，从局部视图获取节点表示
+![](.\img\c_7001.png)
+φ1表示局部视图
+用HGCN学习全局的表示，将结构相似的节点重复聚合成超节点φ2表示全局视图
+HGCN将结构相似的图节点重复聚合到一组超节点上，这可以生成用于卷积的粗化图并扩大节点的接收场。 然后，应用对称图精炼层以恢复原始图结构，以进行节点级表示学习。 这种分层图卷积模型可以从本地到全局的角度全面捕获节点的信息。
+
+###  模型
+![](.\img\c_7002.png)
+
+一张图复制有一份，一份经过GCN生成局部视角的表示，另一部分通过HGCN生成全局视角的表示。对比两个视角之间的损失。
+
+损失 = 半监督对比损失 + 生成损失 + 交叉熵损失
+#### 半监督对比损失
+![](.\img\c_7003.png)
+![](.\img\c_7004.png)
+### 生成损失（为了学习图拓扑结构）
+![](.\img\c_7006.png)
+### 总损失
+![](.\img\c_7008.png)
+### 伪代码
+![](.\img\c_7007.png)
