--- a/对比学习.md
+++ b/对比学习.md
@@ -390,3 +390,21 @@ $k_{i}$ 表示负样本。
 $\mathcal{J}=\frac{1}{2 N} \sum_{i=1}^{N}\left[\ell\left(\boldsymbol{u}_{i}, \boldsymbol{v}_{i}\right)+\ell\left(\boldsymbol{v}_{i}, \boldsymbol{u}_{i}\right)\right]$
 
 相当于一张图形成两个视角,跑了两遍,计算了平均Loss,反向传播
+
+# [Graph Contrastive Learning with Adaptive Augmentation](https://arxiv.org/abs/2010.14945)
+
+自适应增强图对比学习
+
+结合图的拓扑和语义方面的信息
+
+ 数据增强方案应保留图形的固有结构信息和属性信息,使模型的学习对不重要的节点和边的扰动不敏感的表示形式
+
+ 通过对比学习学习到的表示形式往往不会因数据增强方案而导致损坏
+
+增强方法是应适应输入图,(且适应下游任务)
+
+### GCA
+
+![](/img/c_12001.png)
+
+边的重要性用集中度衡量 
