--- a/可解释.md
+++ b/可解释.md
@@ -41,6 +41,8 @@ typora-root-url: img
 
 ### SA
 
+$\nabla^2$
+
 直接采用梯度的平方值作为不同输入特征的重要性得分,可以通过反向传播直接计算,和训练网络一样,但目标是输入特征而不是模型参数,输入特征可以是图节点,边或者节点特征,假设较高的绝对梯度值指示相应的输入特征更加重要.
 
 局限性:只能反应输入和输出之间的灵敏度,不能准确显示其重要性,而且在饱和区域,对于修改输入,梯度都无法反应
